Separates most wanted packages from others
baseline_packages holds "most wanted" packages
Use naseline_packages_addons to add more packages to this list

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,16 +1,5 @@
-baseline_packages:
-    - curl
-    - ethtool
-    - htop
-    - git
-    - iftop
-    - iotop
-    - iperf
-    - nethogs
-    - ngrep
-      #    - sysdig
-    - sysstat
-    - vim
+baseline_packages_addons:
+  - sysdig
 
 baseline_users: []
 #baseline_users:
