Fixes frangment destination
Fixed wrond directory for fragment

--- a/tasks/baseline.yml
+++ b/tasks/baseline.yml
@@ -51,7 +51,7 @@
 - name: Adds 10_prompt.bash
   template:
     src: 10_prompt.bash.j2
-    dest: "{{'~' + item.name }}/.bashrc/10_prompt.bash"
+    dest: "{{'~' + item.name }}/.bash.d/10_prompt.bash"
     mode: 0770
   with_flattened:
     - [ { name: root } ]
