--- a/tasks/baseline.yml
+++ b/tasks/baseline.yml
@@ -31,7 +31,7 @@
     dest: "{{'~' + item.name }}/.bash.d/"
     mode: 0770
     owner: "{{ item.name }}"
-    group: "{{ item.group | default([item.name]) }}"
+    group: "{{ item.group | default(item.name) }}"
   with_flattened:
     - [ { name: 'root' } ]
     - [ baseline_users ]
@@ -42,7 +42,7 @@
     dest: "{{'~' + item.name }}/.bashrc"
     mode: 0770
     owner: "{{ item.name }}"
-    group: "{{ item.group | default([item.name]) }}"
+    group: "{{ item.group | default(item.name) }}"
   with_flattened:
     - [ { name: root } ]
     - [ baseline_users ]
