adds support for security limits
Added filemax to security limits (default: 500k)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,5 +7,7 @@ baseline_users: []
 
 baseline_tz: Europe/Paris
 
+baseline_file_limit: 500000
+
 iftop_default_interface: "{{ ansible_interfaces.1 }}"
 
