Added lm-sensors to base packages
Useful by default

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -7,10 +7,10 @@ baseline_packages:
     - iotop
     - iperf
     - jq
+    - lm-sensors
     - nethogs
     - ngrep
     - sysstat
     - vim
-
 
 
