Added rsyslogd restart handler
Rsyslogd must be restarted when timezone is changed

--- a/tasks/baseline.yml
+++ b/tasks/baseline.yml
@@ -12,6 +12,8 @@
     src: "/usr/share/zoneinfo/{{ baseline_tz }}"
     dest: /etc/localtime
   tags: tz
+  notify:
+    - Restart rsyslogd
 
 - name: Creates required groups
   group:
