Forces symlink creation
On some system, localtime is a plain file.
this forces symlink to override file.

--- a/tasks/baseline.yml
+++ b/tasks/baseline.yml
@@ -11,6 +11,7 @@
     state: link
     src: "/usr/share/zoneinfo/{{ baseline_tz }}"
     dest: /etc/localtime
+    force: yes
   tags: ["tz","baseline:tz"]
   notify:
     - Restart rsyslogd
