--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,5 +9,8 @@ baseline_tz: Europe/Paris
 
 baseline_file_limit: 500000
 
+# baseline_whitelist_chain: INPUT
+# baseline_whitelist: False
+
 iftop_default_interface: "{{ ansible_interfaces.1 }}"
 
