Fixes option name

--- a/tasks/baseline.yml
+++ b/tasks/baseline.yml
@@ -28,7 +28,7 @@
     group: "{{ item.group | default(item.name) }}"
     groups: "{{ item.group | default([item.name]) | intersect(item.groups | default([])) | join(',') }}"
     shell: /bin/bash
-    on_create: true
+    update_password: on_create
   with_items: "{{ baseline_users }}"
 
 - name: Adds bash dotfile setup
