Fixes group membership

--- a/tasks/baseline.yml
+++ b/tasks/baseline.yml
@@ -26,7 +26,7 @@
     name: "{{ item.name }}"
     password: "{{ item.password | default(omit) }}"
     group: "{{ item.group | default(item.name) }}"
-    groups: "{{ item.group | default([item.name]) | intersect(item.groups | default([])) | join(',') }}"
+    groups: "{{ item.groups }}"
     append: yes
     shell: /bin/bash
     update_password: on_create
