ajout de language-pack-fr-base bmon dns-utils et iptraf aux packages aux paquets à installer

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,5 +15,7 @@ baseline_packages:
     - ngrep
     - sysstat
     - vim
-
-
+    - language-pack-fr-base
+    - bmon
+    - dns-utils
+    - iptraf
