--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services: docker
 env:
   - distro: ubuntu1804
   - distro: ubuntu1604
-  - distro: ubuntu1404
+    # - distro: ubuntu1404: does not build
 
 script:
   # Configure test script so we can run extra tests after playbook is run.
