--- a/vars/main.yml
+++ b/vars/main.yml
@@ -18,9 +18,11 @@ baseline_packages:
     - dnsutils
     - bmon
     - iptraf
-    - language-pack-fr-base
     - ncdu
     - ifupdown
     - httpie
     - moreutils
     - nmon
+
+ubuntu_only_packages:
+    - language-pack-fr-base
