--- a/tasks/baseline.yml
+++ b/tasks/baseline.yml
@@ -10,7 +10,7 @@
   apt:
     pkg: "{{ item.value }}"
     state: present
-  when: ansible_distribution == "{{ item.key }}"
+  when: ansible_distribution == item.key | lower
   with_dict: "{{ baseline_distribution_specific }}"
 
 - name: Changes TZ
