--- a/tasks/baseline.yml
+++ b/tasks/baseline.yml
@@ -1,10 +1,12 @@
 - name: Adds few niceties
   apt:
-    pkg: "{{ item }}"
+    pkg: "{{ baseline_packages }}"
     state: present
-  with_items:
-    - "{{ baseline_packages }}"
-    - "{{ baseline_packages_addons }}"
+
+- name: Adds few addons
+  apt:
+    pkg: "{{ baseline_packages_addons }}"
+    state: present
 
 - name: Adds distribution specific packages 
   apt:
