--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,30 +1,30 @@
 baseline_packages:
     - apt-transport-https
     - at
+    - bmon
     - curl
+    - dnsutils
     - dstat
     - ethtool
-    - htop
     - git
+    - htop
+    - httpie
     - iftop
+    - ifupdown
     - iotop
     - iperf
+    - iptraf
     - jq
     - lm-sensors
+    - moreutils
+    - ncdu
     - nethogs
     - ngrep
-    - sysstat
-    - vim
-    - dnsutils
-    - bmon
-    - iptraf
-    - ncdu
-    - ifupdown
-    - httpie
-    - moreutils
     - nmon
-    - python-apt
+    - python3-apt
+    - sysstat
     - tcpdump
+    - vim
 
 baseline_distribution_specific:
     Ubuntu:
