--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,10 +17,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      # - name: Install dependencies
-      #   run: |
-      #     python3 -m pip install --upgrade pip
-      #     python3 -m pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python3 --version
+          python3 -m pip install ansible molecule[docker]
+          ansible --version
+          molecule --version
       - name: Test with molecule
         run: |
           molecule test
