--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,6 @@ jobs:
           molecule --version
       - name: Test with molecule
         run: |
+          pwd
+          ls
           molecule test
